[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools_scm]
write_to = "./libs/datagraph/src/aika/datagraph/_version.py"
root = "../.."
git_describe_command = "git describe --tags --match aika-* --first-parent"