[metadata]
name = aika-ml
description = Methods for training supervised models on timeseries data
long_description = file: README.md
url = https://github.com/phil20686/aika/
author = Philip Stephens, Dominic Kennedy
author_email = philip.stephens@sjc.oxon.org
license = GNU LGPLv3
license_files = doc/LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Lanugage :: Python :: 3.11
    Topic :: Software Development :: Libraries
project_urls =
    Source = https://github.com/phil20686/aika/

[options]
packages = find_namespace:
package_dir=
    =src
platforms = any
include_package_data = True
install_requires =
    pandas>=1.1.5
    numpy
    aika-utilities
    aika-time
    scikit-learn>=1.1.2
python_requires = >= 3.6
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
all =
    %(test)s