[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.setuptools_scm]
#version_scheme = "post-release"
write_to = "./libs/utilities/src/aika/utilities/_version.py"
root = "../.."
git_describe_command = "git describe --tags --match aika-v* --first-parent"